--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<header>
+<body>
   <app-header></app-header>
-</header>
-
-<footer>
+  
+  <router-outlet></router-outlet>
+  
   <app-footer></app-footer>
-</footer>
+</body>
