--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -6,11 +6,9 @@
 </head>  
 <header>
     <div class="header">
-        <a href="#default" class="logo"><img src="assets\airbnb_logo.png"></a>
+        <a href="/" class="logo"><img src="assets\airbnb_logo.png"></a>
         <div class="header-right">
-          <a class="active" href="#home">Home</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
+          
         </div>
       </div>
 </header>
