--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -8,7 +8,20 @@
     <div class="header">
         <a href="/" class="logo"><img src="assets\airbnb_logo.png"></a>
         <div class="header-right">
-          
+            <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
+                <mat-form-field class="">
+                    <input matInput placeholder="Search" type="text" formControlName="searchInput" class="search">
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Sort by price</mat-label>
+                    <mat-select>
+                        <mat-option value="low">Low to High</mat-option>
+                        <mat-option value="high">High to Low</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                <button mat-raised-button color="primary" class="searchbtn" type="submit" >Search</button>
+            </form>
         </div>
       </div>
 </header>
+
