--- a/src/app/navigation/header/header.component.css
+++ b/src/app/navigation/header/header.component.css
@@ -1,7 +1,7 @@
 /* Style the header with a grey background and some padding */
 .header {
     overflow: hidden;
-    background-color: #f1f1f1;
+    background-color: #e3d3d3;
     padding: 20px 10px;
     font-family: 'Wix Madefor Text', sans-serif;
   }
@@ -57,11 +57,19 @@
     }
   }
 
-  .search {
-    width: 200px;
-    height: 30px;
-    padding: 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: #dececf;
+  .search-field {
+    width: 100%;
   }
+
+  .search-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+
+
+
+
+  
+
+
