--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -8,13 +8,15 @@
     <div class="header">
         <a href="/" class="logo"><img src="assets\airbnb_logo.png"></a>
         <div class="header-right">
-            <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
-                <mat-form-field class="">
-                    <input matInput placeholder="Search" type="text" formControlName="searchInput" class="search">
+            <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" class="search-form">
+                <mat-form-field class="search-field">
+                    <input matInput placeholder="Search" type="text" formControlName="searchInput" class="">
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Sort by price</mat-label>
                     <mat-select>
+                        <!--TODO price range (slider?), type of place, rooms and beds,-->
+                        <!--TODO beds, bathrooms, property type, amenities, host language -->
                         <mat-option value="low">Low to High</mat-option>
                         <mat-option value="high">High to Low</mat-option>
                     </mat-select>
