--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,35 @@
-<p>home works!</p>
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>  
+<div class="container">
+  <h2>Most Requested Hotels</h2>
+  <div class="hotel-row">
+    <div *ngFor="let hotel of mostRequestedHotels" class="hotel-card">
+        <mat-card class="hotel-card">
+            <img mat-card-image [src]="hotel.image">
+            <mat-card-content>
+                <mat-card-title>{{ hotel.location }}</mat-card-title>
+                <p>{{ hotel.price }}$ night</p>
+            </mat-card-content>
+          </mat-card>
+    </div>
+  </div>
+  <h2>Hotels by Most Requested Regions</h2>
+  <div class="hotel-row">
+    <div *ngFor="let hotel of mostRequestedHotels" class="hotel-card">
+        <mat-card class="hotel-card">
+            <img mat-card-image [src]="hotel.image">
+            <mat-card-content>
+                <mat-card-title>{{ hotel.location }}</mat-card-title>
+                <p>{{ hotel.price }}$ night</p>
+            </mat-card-content>
+          </mat-card>
+    </div>
+  </div>
+</div>
+
+
+
+  
