--- a/src/app/navigation/header/header.component.css
+++ b/src/app/navigation/header/header.component.css
@@ -53,7 +53,9 @@
       text-align: left;
     }
     .header-right {
-      float: none;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
   }
 
@@ -67,8 +69,13 @@
     width: 100%;
   }
 
+  .user-menu {
+      padding-left: 600px;
+  }
 
-
+  .search-btn {
+    margin-left: 200px;
+  }
 
   
 
