--- a/src/app/pages/user/login/login.component.html
+++ b/src/app/pages/user/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<div class="form-container">
+    <h1>Sign In</h1>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <mat-form-field>
+            <input matInput placeholder="Email" formControlName="email" required>
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Password" formControlName="password" type="password" required>
+        </mat-form-field>
+
+        <button mat-raised-button color="primary" type="submit">Sign In</button>
+    </form>
+</div>
