--- a/src/app/pages/user/registration/registration.component.html
+++ b/src/app/pages/user/registration/registration.component.html
@@ -1,1 +1,18 @@
-<p>registration works!</p>
+<div class="form-container">
+    <h1>Sign Up</h1>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <mat-form-field>
+            <input matInput placeholder="Email" formControlName="email" required>
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Password" formControlName="password" type="password" required>
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password" required>
+        </mat-form-field>
+
+        <button mat-raised-button color="primary" type="submit">Register</button>
+    </form>
+</div>
