user page update, home page card update, hotel info page added, trip page added

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -45,4 +45,9 @@ h2, p, mat-card-title {
     margin-top: 30px;
   }
 
+  .hotel-card a {
+    text-decoration: none;
+    color: inherit;
+  }
+
   
