--- a/src/app/navigation/header/header.component.css
+++ b/src/app/navigation/header/header.component.css
@@ -1,84 +1,58 @@
-/* Style the header with a grey background and some padding */
-.header {
-    overflow: hidden;
-    background-color: #e3d3d3;
-    padding: 20px 10px;
-    font-family: 'Wix Madefor Text', sans-serif;
-  }
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #e3d3d3;
+  padding: 20px 10px;
+  font-family: 'Wix Madefor Text', sans-serif;
+}
 
-  .logo, img {
-    width: 130px;
-  }
-  
-  /* Style the header links */
-  .header a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
-  }
-  
-  /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-  .header a.logo {
-    font-size: 25px;
-    font-weight: bold;
-  }
-  
-  /* Change the background color on mouse-over */
-  .header a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Style the active/current link*/
-  .header a.active {
-    background-color: dodgerblue;
-    color: white;
-  }
-  
-  /* Float the link section to the right */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #e3d3d3;
+  padding: 20px 10px;
+  font-family: 'Wix Madefor Text', sans-serif;
+}
+
+.logo, img {
+  width: 130px;
+}
+
+header a {
+  padding: 12px;
+  text-decoration: none;
+}
+
+.header-right {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 80px; /* Adjust this value as needed. */
+}
+
+
+.search-field {
+  width: 100%;
+}
+
+.search-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.user-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+@media screen and (max-width: 500px) {
   .header-right {
-    float: right;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0;
+    margin-top: 50px; /* Adjust this value as needed. */
   }
-  
-  /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-  @media screen and (max-width: 500px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .header-right {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-  }
-
-  .search-field {
-    width: 100%;
-  }
-
-  .search-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-
-  .user-menu {
-      padding-left: 600px;
-  }
-
-  .search-btn {
-    margin-left: auto;
-  }
-
-  
-
-  
-
+}
 
