--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,19 +4,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 </head>  
 <header>
-    <div class="header">
+    <aside>
         <a href="/" class="logo"><img src="assets\airbnb_logo.png"></a>
+    </aside>
+    <aside>
         <div class="header-right">
-            <div class="user-menu">
-                <button mat-button [matMenuTriggerFor]="menu"><i class="fa fa-user fa-2x"></i></button>
+                
+            <button mat-button [matMenuTriggerFor]="menu" class="user-btn"><i class="fa fa-user fa-2x"></i></button>
                 <mat-menu #menu="matMenu">
                     <button mat-menu-item *ngIf="!isLoggedIn" [routerLink]="['/login']">Login</button>
                     <button mat-menu-item *ngIf="!isLoggedIn" [routerLink]="['/register']">Sign Up</button>
                     <button mat-menu-item *ngIf="isLoggedIn" [routerLink]="['/user']">Account</button>
                     <button mat-menu-item *ngIf="isLoggedIn" [routerLink]="['/trip']">My trip</button>
-
                 </mat-menu>
-            </div>
             <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" class="search-form">
                 <mat-form-field class="search-field">
                     <input matInput placeholder="Search" type="text" formControlName="searchInput" class="search-input">
@@ -75,8 +75,7 @@
                 </div>
                 <button mat-raised-button color="primary" class="search-btn" type="submit" >Search</button>
             </form>
-
         </div>
-      </div>
+    </aside>
 </header>
 
