--- a/src/app/pages/home/card-area/card-area.component.css
+++ b/src/app/pages/home/card-area/card-area.component.css
@@ -8,7 +8,8 @@
 
 .hotel-card {
     max-width: 400px;
-    border-radius: 5px;
+    padding-top: 10px;
+    border-radius: 15px;
     flex: 0 0 calc(100% - 10px); /* This means the card will not shrink or grow, and its base size is 100% of the container minus 10px. Adjust this value as needed. */
     margin: 3px; 
 }
@@ -51,3 +52,12 @@
     text-decoration: none;
     color: inherit;
 }
+
+.clickable-content {
+    cursor: pointer;
+  }
+  
+  .clickable-content:hover {
+    background-color: #f5f5f5;
+  }
+
