--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,5 +7,5 @@
   />
 </head>
 <div class="container">
-  <app-card-area [Hotels]="mostRequestedHotels"></app-card-area>
+  <app-card-area [allHotels]="allHotels"></app-card-area>
 </div>
