--- a/src/app/pages/home/card-area/carousel/carousel.component.html
+++ b/src/app/pages/home/card-area/carousel/carousel.component.html
@@ -2,14 +2,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <div class="carousel-container">
-    <img *ngFor="let image of images; let i=index"
-        [src]="image" [alt]="image"
-        [ngClass]="{'image-active': selectedIndex === i}"
-        class="fade"
-    />
+        <!-- <img *ngFor="let image of hotel?.allImages; let i=index"
+            [src]="image"
+            [ngClass]="{'image-active': selectedIndex === i}"
+            class="fade"
+        /> -->
+        <div *ngFor="let image of hotel.allImages; let i = index">
+            <img *ngIf="i === selectedIndex" [src]="image" alt="Carousel image"
+                [ngClass]="{'image-active': selectedIndex === i}"
+                class="fade"
+            />
+          </div>
 
     <div *ngIf="indicators" class="carousel-dot-container">
-        <span *ngFor="let dot of images; let i=index"
+        <span *ngFor="let dot of hotel.allImages; let i=index"
             class="dot"
             [ngClass]="{'active': selectedIndex === i}"
             (click)="selectImage(i)"
