--- a/src/app/pages/home/card-area/card-area.component.css
+++ b/src/app/pages/home/card-area/card-area.component.css
@@ -1,40 +1,43 @@
 .hotel-row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-top: 15px;
     margin-bottom: 30px;
 }
 
 .hotel-card {
     max-width: 400px;
+    height: 450px;
     padding-top: 10px;
     border-radius: 15px;
-    flex: 0 0 calc(100% - 10px); /* This means the card will not shrink or grow, and its base size is 100% of the container minus 10px. Adjust this value as needed. */
+    flex: 0 0 calc(100% - 10px);
     margin: 3px; 
 }
 
-@media (min-width: 600px) {
-    .hotel-row {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 10px;
-    }
-
+@media (min-width: 480px) {
     .hotel-card {
-        flex: 0 0 calc(50% - 10px);
+      flex: 0 0 calc(50% - 10px); /* 2 cards per row */
     }
-}
-
-@media (min-width: 900px) {
-    .hotel-row {
-        grid-template-columns: repeat(5, 1fr);
-    }
-
+  }
+  
+  @media (min-width: 768px) {
     .hotel-card {
-        flex: 0 0 calc(20% - 10px);
+      flex: 0 0 calc(33.33% - 10px); /* 3 cards per row */
     }
-}
+  }
+  
+  @media (min-width: 1024px) {
+    .hotel-card {
+      flex: 0 0 calc(25% - 10px); /* 4 cards per row */
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .hotel-card {
+      flex: 0 0 calc(20% - 10px); /* 5 cards per row */
+    }
+  }
 
 .hotel-card p {
     font-size: 16px;
