--- a/src/app/pages/hotel-pg/hotel-pg.component.html
+++ b/src/app/pages/hotel-pg/hotel-pg.component.html
@@ -1,1 +1,12 @@
-<p>hotel-pg works!</p>
+<div class="hotel-info">
+    <h1>{{ hotel?.name }}</h1>
+    <div class="rating">{{ hotel?.rating }} <i class="fa fa-star"></i></div>
+    <p>{{ hotel?.description }}</p>
+    <h2>Address</h2>
+    <p>{{ hotel?.address?.country }} / {{ hotel?.address?.city }} / {{ hotel?.address?.state }}</p>
+    <h2>Rooms</h2>
+    <div *ngFor="let room of hotel?.rooms; let i = index" class="room">
+        <h3>Room {{ i + 1 }}</h3>
+        <p>${{ room.pricePerNight }} per night</p>
+    </div>
+</div>
