--- a/src/app/pages/user/registration/registration.component.html
+++ b/src/app/pages/user/registration/registration.component.html
@@ -2,16 +2,46 @@
     <h1>Sign Up</h1>
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <mat-form-field>
-            <input matInput placeholder="Email" formControlName="email" required>
+            <mat-label>User Name</mat-label>
+            <input matInput formControlName="userName" type="text" required />
         </mat-form-field>
 
         <mat-form-field>
-            <input matInput placeholder="Password" formControlName="password" type="password" required>
+            <mat-label>Email</mat-label>
+            <input matInput formControlName="email" type="email" required />
         </mat-form-field>
 
         <mat-form-field>
-            <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password" required>
+            <mat-label>Phone Number</mat-label>
+            <input matInput formControlName="phone" type="tel" required />
         </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Personal Number</mat-label>
+            <input matInput formControlName="personalNumber" type="tel" required />
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'" required />
+            <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+                <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Confirm Password</mat-label>
+            <input matInput formControlName="confirmPassword" [type]="hidePassword ? 'password' : 'text'" required />
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Gender</mat-label>
+            <mat-select formControlName="gender" required>
+              <mat-option value="male">Male</mat-option>
+              <mat-option value="female">Female</mat-option>
+              <mat-option value="other">Other</mat-option>
+            </mat-select>
+          </mat-form-field>
 
         <button mat-raised-button color="primary" type="submit">Register</button>
     </form>
