--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -16,13 +16,13 @@
                     <button mat-menu-item *ngIf="!isLoggedIn" [routerLink]="['/register']">Sign Up</button>
                     <button mat-menu-item *ngIf="isLoggedIn" [routerLink]="['/user']">Account</button>
                     <button mat-menu-item *ngIf="isLoggedIn" [routerLink]="['/trip']">My trip</button>
+                    <button mat-menu-item *ngIf="isLoggedIn" (click)="onLogout()">Logout</button>
                 </mat-menu>
             <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" class="search-form">
                 <mat-form-field class="search-field">
                     <input matInput placeholder="Search" type="text" formControlName="searchInput" class="search-input">
                 </mat-form-field>
                 <button mat-button (click)="onAdvancedSearch()">{{ showAdvancedSearch ? 'Close options' : 'Advanced Search' }}</button>
-                <!-- TODO maybe download and load icons from assets -->
                 <div *ngIf="showAdvancedSearch">
                   <mat-form-field>
                     <mat-label>Sort by price</mat-label>
