--- a/src/app/pages/user/user-pg/user-pg.component.html
+++ b/src/app/pages/user/user-pg/user-pg.component.html
@@ -9,27 +9,39 @@
         </mat-form-field>
 
         <mat-form-field>
-            <input matInput placeholder="Phone Number" formControlName="phoneNumber">
+            <input matInput placeholder="Phone Number" formControlName="phone">
+        </mat-form-field>
+
+        <mat-form-field>
+          <input matInput placeholder="Personal Number" formControlName="personalNumber">
         </mat-form-field>
 
         <mat-form-field>
             <input matInput placeholder="Card Number" formControlName="cardNumber">
         </mat-form-field>
 
-        <button mat-button (click)="onChangePassword()">
-            {{ userInfoForm.get('changePassword')?.value ? 'Cancel' : 'Change Password' }}
-          </button>
+        <mat-form-field>
+          <mat-label>Gender</mat-label>
+          <mat-select formControlName="gender" required>
+            <mat-option value="male">Male</mat-option>
+            <mat-option value="female">Female</mat-option>
+            <mat-option value="other">Other</mat-option>
+          </mat-select>
+      </mat-form-field>
       
-          <div *ngIf="userInfoForm.get('changePassword')?.value">
-            <mat-form-field>
-              <input matInput placeholder="New Password" formControlName="password" type="password">
-            </mat-form-field>
-      
-            <mat-form-field>
-              <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password">
-            </mat-form-field>
-          </div>
-      
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'" required />
+        <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+            <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+    </mat-form-field>
+
+    <mat-form-field>
+        <mat-label>Confirm Password</mat-label>
+        <input matInput formControlName="confirmPassword" [type]="hidePassword ? 'password' : 'text'" required />
+    </mat-form-field>
+   
           <button mat-raised-button color="primary" type="submit">Update</button>
         </form>
       </div>
