--- a/src/app/pages/user/user-pg/user-pg.component.html
+++ b/src/app/pages/user/user-pg/user-pg.component.html
@@ -1,47 +1,53 @@
 <div class="user-info">
-    <form [formGroup]="userInfoForm" (ngSubmit)="onSubmit()">
-        <mat-form-field>
-            <input matInput placeholder="User Name" formControlName="userName">
-        </mat-form-field>
-
-        <mat-form-field>
-            <input matInput placeholder="Email" formControlName="email">
-        </mat-form-field>
-
-        <mat-form-field>
-            <input matInput placeholder="Phone Number" formControlName="phone">
-        </mat-form-field>
-
-        <mat-form-field>
-          <input matInput placeholder="Personal Number" formControlName="personalNumber">
-        </mat-form-field>
-
-        <mat-form-field>
-            <input matInput placeholder="Card Number" formControlName="cardNumber">
-        </mat-form-field>
-
-        <mat-form-field>
-          <mat-label>Gender</mat-label>
-          <mat-select formControlName="gender" required>
-            <mat-option value="male">Male</mat-option>
-            <mat-option value="female">Female</mat-option>
-            <mat-option value="other">Other</mat-option>
-          </mat-select>
-      </mat-form-field>
-      
-      <mat-form-field>
-        <mat-label>Password</mat-label>
-        <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'" required />
-        <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
-            <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
+  <form [formGroup]="userInfoForm" (ngSubmit)="onSubmit()">
+    <h2>User Information</h2>
+    <mat-form-field>
+      <mat-label>User Name</mat-label>
+      <input matInput formControlName="userName">
     </mat-form-field>
 
     <mat-form-field>
-        <mat-label>Confirm Password</mat-label>
-        <input matInput formControlName="confirmPassword" [type]="hidePassword ? 'password' : 'text'" required />
+      <mat-label>Email</mat-label>
+      <input matInput formControlName="email">
     </mat-form-field>
-   
-          <button mat-raised-button color="primary" type="submit">Update</button>
-        </form>
-      </div>
+
+    <mat-form-field>
+      <mat-label>Phone Number</mat-label>
+      <input matInput formControlName="phone">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Personal Number</mat-label>
+      <input matInput formControlName="personalNumber">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Card Number</mat-label>
+      <input matInput formControlName="cardNumber">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Gender</mat-label>
+      <mat-select formControlName="gender" required>
+        <mat-option value="male">Male</mat-option>
+        <mat-option value="female">Female</mat-option>
+        <mat-option value="other">Other</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Password</mat-label>
+      <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'" required />
+      <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+        <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Confirm Password</mat-label>
+      <input matInput formControlName="confirmPassword" [type]="hidePassword ? 'password' : 'text'" required />
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" type="submit">Update</button>
+  </form>
+</div>
