--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -20,56 +20,34 @@
                 </mat-menu>
             <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" class="search-form">
                 <mat-form-field class="search-field">
-                    <input matInput placeholder="Search" type="text" formControlName="searchInput" class="search-input">
+                    <mat-label>Enter city</mat-label>
+                    <input matInput placeholder="Search" type="text" formControlName="city" class="search-input">
                 </mat-form-field>
-                <button mat-button (click)="onAdvancedSearch()">{{ showAdvancedSearch ? 'Close options' : 'Advanced Search' }}</button>
+                <button type="button" mat-button (click)="onAdvancedSearch()">{{ showAdvancedSearch ? 'Close options' : 'Advanced Search' }}</button>
                 <div *ngIf="showAdvancedSearch">
-                  <mat-form-field>
-                    <mat-label>Sort by price</mat-label>
-                    <mat-select>
-                      <mat-option value="low">Low to High</mat-option>
-                      <mat-option value="high">High to Low</mat-option>
-                    </mat-select>
-                  </mat-form-field>
                     <mat-form-field>
-                        <mat-label>Rooms</mat-label>
-                        <input matInput type="number" placeholder="Rooms" formControlName="rooms">  
+                        <mat-label>Max. price per night</mat-label>
+                        <input matInput type="number" min="0" formControlName="maxPricePerNight">
                     </mat-form-field>
                     <mat-form-field>
-                        <mat-label>Beds</mat-label>
-                        <input matInput type="number" placeholder="Beds" formControlName="beds">
+                        <mat-label>Min. rating</mat-label>
+                        <input matInput type="number" min="0" max="5" step="0.1" placeholder="Enter minimum rating" formControlName="minRating">
                     </mat-form-field>
                     <mat-form-field>
-                        <mat-label>Bathrooms</mat-label>
-                        <input matInput type="number" placeholder="Bathrooms" formControlName="bathrooms">
-                    </mat-form-field>
-                    <mat-form-field>
-                        <mat-label>Property Type</mat-label>
-                        <mat-select formControlName="propertyType" multiple>
-                            <mat-option value="house">House</mat-option>
-                            <mat-option value="apartment">Apartment</mat-option>
-                            <mat-option value="cabin">Cabin</mat-option>
-                            <mat-option value="villa">Villa</mat-option>
-                            <mat-option value="hotel">Hotel</mat-option>
+                        <mat-label>Room Type</mat-label>
+                        <mat-select formControlName="roomType">
+                            <mat-option [value]="null">None</mat-option>
+                            <mat-option *ngFor="let type of roomTypes$ | async" [value]="type">
+                                {{type}}
+                            </mat-option>
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Amenities</mat-label>
                         <mat-select formControlName="amenities" multiple>
-                            <mat-option value="wifi">Wifi</mat-option>
-                            <mat-option value="parking">Parking</mat-option>
-                            <mat-option value="pool">Pool</mat-option>
-                            <mat-option value="kitchen">Kitchen</mat-option>
-                            <mat-option value="tv">TV</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <mat-form-field>
-                        <mat-label>Host Language</mat-label>
-                        <mat-select formControlName="hostLanguage" multiple>
-                            <mat-option value="english">English</mat-option>
-                            <mat-option value="spanish">Spanish</mat-option>
-                            <mat-option value="french">French</mat-option>
-                            <mat-option value="german">German</mat-option>
+                            <mat-option *ngFor="let amenity of amenities" [value]="amenity.id">
+                                {{amenity.name}}
+                              </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
@@ -77,5 +55,6 @@
             </form>
         </div>
     </aside>
+
 </header>
 
