--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -15,3 +15,18 @@ h2, p, mat-card-title {
     font-weight: bold;
     margin-top: 30px;
   }
+
+.no-results-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh; 
+}
+
+.no-results-div p {
+  font-size: 3em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 40px;
+
+}
