--- a/src/app/pages/user/user-pg/user-pg.component.html
+++ b/src/app/pages/user/user-pg/user-pg.component.html
@@ -24,6 +24,9 @@
     <mat-form-field>
       <mat-label>Card Number</mat-label>
       <input matInput formControlName="cardNumber">
+      <button mat-icon-button matSuffix (click)="deleteCardNumber()">
+        <mat-icon>delete</mat-icon>
+      </button>
     </mat-form-field>
 
     <mat-form-field>
