--- a/src/app/pages/user/registration/registration.component.css
+++ b/src/app/pages/user/registration/registration.component.css
@@ -4,7 +4,11 @@
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
-    background-color: #e3d3d3
+    background-color: #e3d3d3;
+    background-image: url('https://i.imgur.com/PhZjG7V.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 form {
@@ -18,6 +22,6 @@ form {
     padding-right: 30px;
     padding-top: 50px;
     padding-bottom: 50px;
-    background-color: #fff
+    background-color: rgba(82, 81, 81, 0.6); 
 }
 
