--- a/src/app/pages/hotel-pg/hotel-pg.component.css
+++ b/src/app/pages/hotel-pg/hotel-pg.component.css
@@ -46,3 +46,16 @@
     flex: 0 0 50%;
     padding-right: 20px;
   }
+
+  .date-picker-container {
+    display: flex;
+    width: 100%;
+  }
+
+  .clear-button {
+    border: none;
+  }
+
+  p {
+    font-size: medium;
+  }
