--- a/src/app/pages/trip-pg/trip-pg.component.html
+++ b/src/app/pages/trip-pg/trip-pg.component.html
@@ -1,1 +1,7 @@
-<p>trip-pg works!</p>
+<div class="trip-container">
+  <h1>Your Trips</h1>
+  <div *ngFor="let hotel of hotels" class="trip-card">
+    <h2>{{ hotel.name }}</h2>
+    <p>{{ hotel.description }}</p>
+  </div>
+</div>
