--- a/src/app/pages/trip-pg/trip-pg.component.css
+++ b/src/app/pages/trip-pg/trip-pg.component.css
@@ -1,12 +1,34 @@
+h1 {
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+p {
+    font-size: medium;
+}
+
+.hotel-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15px;
+    margin-bottom: 30px;
+}
+
 .trip-container {
     width: 80%;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 15px;
+    margin-bottom: 30px;
 }
 
 .trip-card {
     border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
+    width: 80%; 
+    padding-top: 10px;
+    border-radius: 15px;
     margin-bottom: 20px;
 }
 
@@ -19,3 +41,18 @@
     margin: 0;
     margin-bottom: 10px;
 }
+
+.card-content {
+    display: flex;
+  }
+  
+  .carousel-container {
+    padding: 10px;
+    height: 300px;
+    width: 300px;
+  }
+  
+  .text-container {
+    flex: 1;
+    padding-left: 20px;
+  }
