--- a/src/app/pages/hotel-pg/hotel-pg.component.css
+++ b/src/app/pages/hotel-pg/hotel-pg.component.css
@@ -59,3 +59,29 @@
   p {
     font-size: medium;
   }
+
+  .payment-dialog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  .payment-form {
+    width: 100%;
+    max-width: 350px;
+  }
+  
+  .payment-field {
+    width: 100%;
+  }
+  
+  .button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+   
+  .button-group :first-child {
+    color: rgb(73, 165, 73);
+  }
